<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sanidad para Lote de Ovinos"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etTratamiento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_tratamiento"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etProducto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_producto"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etDosis"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_dosis"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etFechaSanidad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_fecha"
            android:inputType="date"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnGuardarSanidadOvino"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Guardar Sanidad de Lote"
            android:backgroundTint="@color/btn_acciones_color"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>